[gd_scene load_steps=11 format=2]

[ext_resource path="res://FFFFORWA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://No Screenshot.png" type="Texture" id=5]
[ext_resource path="res://scripts/Screenshots.gd" type="Script" id=6]
[ext_resource path="res://scripts/Credits.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.780392, 0.121569, 0.215686, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.698039, 0.117647, 0.207843, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.741176, 0.121569, 0.211765, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 1 )

[node name="Settings" type="Panel"]
margin_right = 1283.0
margin_bottom = 723.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screenshots" type="Label" parent="."]
margin_left = 461.936
margin_top = 107.214
margin_right = 686.936
margin_bottom = 140.214
rect_scale = Vector2( 1.3566, 1.3566 )
custom_fonts/font = SubResource( 4 )
text = "SCREENSHOTS"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Screenshots"]
margin_left = -322.0
margin_top = 45.0
margin_right = 588.0
margin_bottom = 439.0
custom_styles/bg = SubResource( 5 )
allow_reselect = true
allow_rmb_select = true
auto_height = true
max_columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Screenshots/ItemList"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No Screenshot" type="Sprite" parent="Screenshots/ItemList/Control"]
position = Vector2( 155.823, 100 )
scale = Vector2( 0.205, 0.205 )
texture = ExtResource( 5 )

[node name="Control2" type="Control" parent="Screenshots/ItemList"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No Screenshot2" type="Sprite" parent="Screenshots/ItemList/Control2"]
position = Vector2( 450.867, 100 )
scale = Vector2( 0.205, 0.205 )
texture = ExtResource( 5 )

[node name="Control3" type="Control" parent="Screenshots/ItemList"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No Screenshot3" type="Sprite" parent="Screenshots/ItemList/Control3"]
position = Vector2( 750.18, 100 )
scale = Vector2( 0.205, 0.205 )
texture = ExtResource( 5 )

[node name="Control4" type="Control" parent="Screenshots/ItemList"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No Screenshot4" type="Sprite" parent="Screenshots/ItemList/Control4"]
position = Vector2( 750.597, 282 )
scale = Vector2( 0.205, 0.205 )
texture = ExtResource( 5 )

[node name="Control5" type="Control" parent="Screenshots/ItemList"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No Screenshot5" type="Sprite" parent="Screenshots/ItemList/Control5"]
position = Vector2( 454.074, 282 )
scale = Vector2( 0.205, 0.205 )
texture = ExtResource( 5 )

[node name="Control6" type="Control" parent="Screenshots/ItemList"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No Screenshot6" type="Sprite" parent="Screenshots/ItemList/Control6"]
position = Vector2( 156.013, 282 )
scale = Vector2( 0.205, 0.205 )
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
margin_left = 15.262
margin_top = 11.0997
margin_right = 274.262
margin_bottom = 103.1
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Screenshots/ItemList/Control" to="Screenshots" method="_on_Control_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
